RESOLVED FIXED199407
VisitedLinkStore does not need to subclass WebProcessLifetimeObserver
https://bugs.webkit.org/show_bug.cgi?id=199407
Summary VisitedLinkStore does not need to subclass WebProcessLifetimeObserver
Chris Dumez
Reported 2019-07-02 09:20:42 PDT
VisitedLinkStore does not need to subclass WebProcessLifetimeObserver.
Attachments
Patch (6.96 KB, patch)
2019-07-02 09:25 PDT, Chris Dumez
no flags
Patch (7.54 KB, patch)
2019-07-02 09:31 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-02 09:25:01 PDT
Chris Dumez
Comment 2 2019-07-02 09:31:14 PDT
Sam Weinig
Comment 3 2019-07-02 10:41:24 PDT
Comment on attachment 373333 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373333&action=review > Source/WebKit/ChangeLog:8 > + VisitedLinkStore does not need to subclass WebProcessLifetimeObserver > + https://bugs.webkit.org/show_bug.cgi?id=199407 > + > + Reviewed by NOBODY (OOPS!). > + > + * UIProcess/API/mac/WKView.mm: Please flesh out "why" in the changelog.
Chris Dumez
Comment 4 2019-07-02 10:47:32 PDT
Radar WebKit Bug Importer
Comment 5 2019-07-02 10:48:19 PDT
Chris Dumez
Comment 6 2019-07-02 10:54:10 PDT
(In reply to Sam Weinig from comment #3) > Comment on attachment 373333 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=373333&action=review > > > Source/WebKit/ChangeLog:8 > > + VisitedLinkStore does not need to subclass WebProcessLifetimeObserver > > + https://bugs.webkit.org/show_bug.cgi?id=199407 > > + > > + Reviewed by NOBODY (OOPS!). > > + > > + * UIProcess/API/mac/WKView.mm: > > Please flesh out "why" in the changelog. Done before landing, thanks.
Note You need to log in before you can comment on or make changes to this bug.