VisitedLinkStore does not need to subclass WebProcessLifetimeObserver https://bugs.webkit.org/show_bug.cgi?id=199407

Reviewed by Sam Weinig.

VisitedLinkStore does not need to subclass WebProcessLifetimeObserver, it overrides
only 2 of WebProcessLifetimeObserver's functions and the implementation of those
overrides is empty. It also does not use WebProcessLifetimeObserver::processes()
since the VisitedLinkStore maintains its own list of processes.

* UIProcess/API/mac/WKView.mm:
* UIProcess/Automation/WebAutomationSession.cpp:
* UIProcess/VisitedLinkStore.cpp:
* UIProcess/VisitedLinkStore.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::m_resetRecentCrashCountTimer):
* UIProcess/WebProcessPool.h:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:

Canonical link: https://commits.webkit.org/213335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247058 268f45cc-cd09-0410-ab3c-d52691b4dbfc