Source/WebKit/UIProcess/WebProcessPool.h
@@ -43,6 +43,7 @@
 #include "VisitedLinkStore.h"
 #include "WebContextClient.h"
 #include "WebContextConnectionClient.h"
+#include "WebPreferencesStore.h"
 #include "WebProcessProxy.h"
 #include <WebCore/CrossSiteNavigationDataTransfer.h>
 #include <WebCore/ProcessIdentifier.h>
@@ -100,6 +101,7 @@ class HighPerformanceGraphicsUsageSampler;
 class UIGamepad;
 class PerActivityStateCPUUsageSampler;
 class ServiceWorkerProcessProxy;
+class SuspendedPageProxy;
 class WebAutomationSession;
 class WebContextSupplement;
 class WebPageGroup;
